--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-@import '../src/scss/themes/theme-dark.scss';
+@import 'D:/Coding/RawSalmon69.github.io/src/scss/themes/theme-dark.scss';
 @import '../src/scss/themes/theme-light.scss';
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300&display=swap');
 
