--- a/src/scss/themes/theme-dark.scss
+++ b/src/scss/themes/theme-dark.scss
@@ -1,6 +1,6 @@
 body[data-theme="dark"] {  
 
-   @import '../src/scss/dark-slider.scss';
+   @import 'D:/Coding/RawSalmon69.github.io/src/scss/dark-slider.scss';
 
    .slider-tab {
       background-color: #8C8C8C;
