--- a/src/scss/themes/theme-light.scss
+++ b/src/scss/themes/theme-light.scss
@@ -1,5 +1,5 @@
 body[data-theme="light"] {
-    @import '../src/scss/light-slider.scss';
+    @import 'D:/Coding/RawSalmon69.github.io/src/scss/light-slider.scss';
  
     .slider-tab {
        background-color: #D7CAAA;
